--- a/package.json
+++ b/package.json
@@ -6,12 +6,18 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "ts": "ts-node /pages/lib/index.ts"
   },
   "dependencies": {
+    "ace-builds": "^1.4.14",
+    "js-beautify": "^1.14.3",
     "next": "12.1.5",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-ace": "^10.0.0",
+    "react-dom": "18.0.0",
+    "shift-ast": "^6.1.0",
+    "shift-refactor": "^2.0.0"
   },
   "devDependencies": {
     "@types/node": "17.0.25",
@@ -19,6 +25,7 @@
     "@types/react-dom": "18.0.1",
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.5",
+    "ts-node": "^10.7.0",
     "typescript": "4.6.3"
   }
 }
